Fix contrast theme split button text color

--- a/src/contrast-theme.scss
+++ b/src/contrast-theme.scss
@@ -545,6 +545,11 @@ $headerDarkBlue: #0f182d;
     }
   }
 
+  .wave-title {
+    background-color: $lightMediumGray;
+    color: $darkTextGray;
+  }
+
   .sequence-step {
     background-color: $darkerMediumGray;
     color: $darkBackground;
@@ -723,6 +728,10 @@ $headerDarkBlue: #0f182d;
           }
         }
       }
+    }
+
+    .wave-title {
+      background-color: $muteGray;
     }
 
     .piano-keys {
